# MusicReader

./: .gitignore  CLAUDE.md  README.md  SomeRandomNotes.ly  SomeRandomNotes1490234288.26.ly  SomeRandomNotes1490234289.79.ly  SomeRandomNotes1490234292.97.ly  SomeRandomNotes1490239924.96.ly  SomeRandomNotes1490239993.54.ly  SomeRandomNotes1490251123.52.ly  SomeRandomNotes1490304774.98.ly  SomeRandomNotes1490320509.48.ly  WebReader.py  best-midi.ly  best.midi  config.ini  license.txt  lilylib.py  midi2ly.py  pymidi.py  test.ly
backend/: pyproject.toml
backend/musicreader/: __init__.py  api.py  generator.py  model.py  musicxml.py  rhythm.py
backend/tests/: test_api.py  test_config.py  test_generator.py  test_melody.py  test_rhythm.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: config.js  config.ts  main.js  main.ts  player.js  player.ts  store.js  store.ts  style.css
images/: test1490320463.57.midi  test1490320512.57.midi  test1490320649.58.midi
models/: basic_rnn_beatles.mag
templates/: main2.html
